--- a/keyboard/MDK-ARM/keyboard/keyboard.build_log.htm
+++ b/keyboard/MDK-ARM/keyboard/keyboard.build_log.htm
@@ -22,47 +22,19 @@ Dialog DLL:      TCM.DLL V1.56.6.0
  
 <h2>Project:</h2>
 G:\STM32\STM32_Keyboard\keyboard\MDK-ARM\keyboard.uvprojx
-Project File Date:  09/05/2025
+Project File Date:  09/18/2025
 
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 6 (build 750)', folder: 'C:\Users\Admin\AppData\Local\Keil_v5\ARM\ARMCC\Bin'
 Build target 'keyboard'
-compiling main.c...
-../Lib/fonts.h(129): warning:  #1-D: last line of file ends without a newline
-  #endif
-../Lib/ssd1306.h(238): warning:  #1295-D: Deprecated declaration ssd1306_I2C_Init - give arg types
-  void ssd1306_I2C_Init();
-../Lib/ssd1306.h(309): warning:  #1-D: last line of file ends without a newline
-  #endif
-../Core/Src/main.c(83): warning:  #1295-D: Deprecated declaration KB_Scan - give arg types
-  uint32_t KB_Scan();
-../Core/Src/main.c(130): warning:  #188-D: enumerated type mixed with another type
-  	HAL_GPIO_WritePin(GPIOB, GPIO_PIN_3, 0);
-../Core/Src/main.c(131): warning:  #188-D: enumerated type mixed with another type
-  	HAL_GPIO_WritePin(GPIOB, GPIO_PIN_4|GPIO_PIN_5, 1);
-../Core/Src/main.c(145): warning:  #188-D: enumerated type mixed with another type
-  	HAL_GPIO_WritePin(GPIOB, GPIO_PIN_4, 0);
-../Core/Src/main.c(146): warning:  #188-D: enumerated type mixed with another type
-  	HAL_GPIO_WritePin(GPIOB, GPIO_PIN_3|GPIO_PIN_5, 1);
-../Core/Src/main.c(160): warning:  #188-D: enumerated type mixed with another type
-  	HAL_GPIO_WritePin(GPIOB, GPIO_PIN_5, 0);
-../Core/Src/main.c(161): warning:  #188-D: enumerated type mixed with another type
-  	HAL_GPIO_WritePin(GPIOB, GPIO_PIN_3|GPIO_PIN_4, 1);
-../Core/Src/main.c(255): warning:  #188-D: enumerated type mixed with another type
-  	SSD1306_Puts(key_noti, &Font_7x10, 1);
-../Core/Src/main.c(269): warning:  #188-D: enumerated type mixed with another type
-  		SSD1306_Puts("                 ", &Font_7x10, 1);
-../Core/Src/main.c(318): warning:  #188-D: enumerated type mixed with another type
-      SSD1306_Puts(buff_time, &Font_11x18, 1);
-../Core/Src/main.c(324): warning:  #188-D: enumerated type mixed with another type
-  	SSD1306_Puts(buff_day, &Font_7x10, 1);
-../Core/Src/main.c(329): warning:  #188-D: enumerated type mixed with another type
-      SSD1306_Puts(buff_day, &Font_7x10, 1);
-../Core/Src/main.c: 15 warnings, 0 errors
+compiling usbd_hid.c...
+../Lib/hid_report_desc.h(5): warning:  #47-D: incompatible redefinition of macro "HID_MOUSE_REPORT_DESC_SIZE"  (declared at line 49 of "../Middlewares/ST/STM32_USB_Device_Library/Class/HID/Inc/usbd_hid.h")
+  #define HID_MOUSE_REPORT_DESC_SIZE  (114U)
+../Middlewares/ST/STM32_USB_Device_Library/Class/HID/Src/usbd_hid.c: 1 warning, 0 errors
 linking...
-Program Size: Code=24772 RO-data=5736 RW-data=468 ZI-data=5084  
+Program Size: Code=24776 RO-data=5736 RW-data=352 ZI-data=5200  
 FromELF: creating hex file...
-"keyboard\keyboard.axf" - 0 Error(s), 15 Warning(s).
+"keyboard\keyboard.axf" - 0 Error(s), 1 Warning(s).
 
 <h2>Software Packages used:</h2>
 
