--- a/keyboard/MDK-ARM/keyboard/keyboard.build_log.htm
+++ b/keyboard/MDK-ARM/keyboard/keyboard.build_log.htm
@@ -22,12 +22,29 @@ Dialog DLL:      TCM.DLL V1.56.6.0
  
 <h2>Project:</h2>
 G:\STM32\STM32_Keyboard\keyboard\MDK-ARM\keyboard.uvprojx
-Project File Date:  09/18/2025
+Project File Date:  09/25/2025
 
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 6 (build 750)', folder: 'C:\Users\Admin\AppData\Local\Keil_v5\ARM\ARMCC\Bin'
 Build target 'keyboard'
-"keyboard\keyboard.axf" - 0 Error(s), 0 Warning(s).
+compiling main.c...
+../Lib/fonts.h(129): warning:  #1-D: last line of file ends without a newline
+  #endif
+../Lib/ssd1306.h(238): warning:  #1295-D: Deprecated declaration ssd1306_I2C_Init - give arg types
+  void ssd1306_I2C_Init();
+../Lib/ssd1306.h(309): warning:  #1-D: last line of file ends without a newline
+  #endif
+../Core/Src/main.c(235): warning:  #188-D: enumerated type mixed with another type
+      SSD1306_Puts(buff_time, &Font_11x18, 1);
+../Core/Src/main.c(241): warning:  #188-D: enumerated type mixed with another type
+  	SSD1306_Puts(buff_day, &Font_7x10, 1);
+../Core/Src/main.c(246): warning:  #188-D: enumerated type mixed with another type
+      SSD1306_Puts(buff_day, &Font_7x10, 1);
+../Core/Src/main.c: 6 warnings, 0 errors
+linking...
+Program Size: Code=30912 RO-data=6272 RW-data=604 ZI-data=5316  
+FromELF: creating hex file...
+"keyboard\keyboard.axf" - 0 Error(s), 6 Warning(s).
 
 <h2>Software Packages used:</h2>
 
@@ -51,7 +68,7 @@ Package Vendor: Keil
 
    * Component: ARM::CMSIS:CORE@6.1.0
       Include file:  CMSIS/Core/Include/tz_context.h
-Build Time Elapsed:  00:00:00
+Build Time Elapsed:  00:00:03
 </pre>
 </body>
 </html>
